Fix collapse/expand chevron on passed/not applicable sections

--- a/src/DetailsView/reports/automated-checks-report.scss
+++ b/src/DetailsView/reports/automated-checks-report.scss
@@ -84,6 +84,13 @@ $outcome-not-applicable-summary-color: $neutral-outcome;
 
 .result-section {
     padding-bottom: 58px;
+
+    .title-container[aria-level='2'] {
+        .collapsible-control::before {
+            position: relative;
+            bottom: 2px;
+        }
+    }
 }
 
 .rule-details-group {
